@@ -1,2 +1,3 @@
 # Assignment5
+In terminal enter the command: java --enable-preview -jar Assignment5.jar
 Welcome to metric converter! Please input your query. (g = oz, kg = lb, mm = in, km = mi) Enter 'exit' to exit the program
